--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.3",
-    "express-jwt": "^6.1.1",
-    "express-jwt-authz": "^2.4.1",
-    "express-validator": "^6.14.2",
-    "jsonwebtoken": "^8.5.1",
-    "jwks-rsa": "^2.1.4",
-    "winston": "^3.7.2"
+    "express": "^4.19.2",
+    "express-jwt": "^8.4.1",
+    "express-jwt-permissions": "^1.3.7",
+    "express-validator": "^7.1.0",
+    "jwks-rsa": "^3.1.0",
+    "winston": "^3.13.0"
   }
 }
